--- a/kab-kota/laporan/index.html
+++ b/kab-kota/laporan/index.html
@@ -188,7 +188,7 @@
             <div class="grid grid-cols-1 lg:grid-cols-2 gap-4 sm:gap-6">
 
                 <!-- Left Column (6/12) -->
-                <div class="space-y-6">
+                <div class="space-y-4 sm:space-y-6">
 
                     <!-- RTK Status Card -->
                     <div class="bg-white rounded-lg p-4 sm:p-6 shadow-sm">
@@ -248,13 +248,13 @@
                             <div class="flex items-center justify-between">
                                 <div>
                                     <p class="text-sm text-gray-600 mb-1">Periode Berlaku</p>
-                                    <p class="text-3xl font-bold text-indigo-600">2024 - 2029</p>
+                                    <p class="text-xl sm:text-3xl font-bold text-indigo-600">2024 - 2029</p>
                                 </div>
                                 <div class="text-right">
                                     <div
-                                        class="inline-flex items-center justify-center w-16 h-16 bg-white rounded-full shadow-md">
+                                        class="inline-flex items-center justify-center w-12 h-12 sm:w-16 sm:h-16 bg-white rounded-full shadow-md">
                                         <div class="text-center">
-                                            <p class="text-2xl font-bold text-indigo-600">5</p>
+                                            <p class="text-lg sm:text-2xl font-bold text-indigo-600">5</p>
                                             <p class="text-xs text-gray-600">Tahun</p>
                                         </div>
                                     </div>
@@ -266,12 +266,12 @@
                 </div>
 
                 <!-- Right Column (6/12) - PDF Viewer -->
-                <div class="space-y-6">
+                <div class="space-y-4 sm:space-y-6">
                     <div class="bg-white rounded-lg p-6 shadow-sm sticky top-20">
                         <div class="flex items-center justify-between mb-4">
-                            <h3 class="text-lg font-bold text-gray-900">Dokumen RTK</h3>
+                            <h3 class="text-base sm:text-lg font-bold text-gray-900">Dokumen RTK</h3>
                             <a href="../../assets/UU Nomor 13 Tahun 2003.pdf" download
-                                class="inline-flex items-center px-3 py-2 bg-indigo-600 text-white text-sm font-medium rounded-lg hover:bg-indigo-700 transition-colors">
+                                class="inline-flex items-center px-2 sm:px-3 py-1.5 sm:py-2 bg-indigo-600 text-white text-xs sm:text-sm font-medium rounded-lg hover:bg-indigo-700 transition-colors">
                                 <svg class="w-4 h-4 mr-1" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                                         d="M12 10v6m0 0l-3-3m3 3l3-3m2 8H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z" />
@@ -279,7 +279,7 @@
                                 Download
                             </a>
                         </div>
-                        <div class="border rounded-lg overflow-hidden bg-gray-100" style="height: 700px;">
+                        <div class="border rounded-lg overflow-hidden bg-gray-100" style="height: 400px;" class="sm:!h-[700px]">
                             <iframe src="../../assets/UU Nomor 13 Tahun 2003.pdf#toolbar=1" class="w-full h-full"
                                 frameborder="0"></iframe>
                         </div>
