--- a/kab-kota/laporan/upload.html
+++ b/kab-kota/laporan/upload.html
@@ -276,7 +276,7 @@
                                             </div>
                                         </div>
                                         <button type="button" id="removeFileBtn"
-                                            class="mt-3 px-4 py-2 bg-red-100 text-red-700 text-sm font-medium rounded-lg hover:bg-red-200 transition-colors">
+                                            class="mt-2 sm:mt-3 px-3 sm:px-4 py-1.5 sm:py-2 bg-red-100 text-red-700 text-xs sm:text-sm font-medium rounded-lg hover:bg-red-200 transition-colors">
                                             <svg class="w-4 h-4 inline mr-1" fill="none" stroke="currentColor"
                                                 viewBox="0 0 24 24">
                                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -289,14 +289,14 @@
                             </div>
 
                             <!-- Action Buttons -->
-                            <div class="flex gap-4 pt-4">
+                            <div class="flex flex-col sm:flex-row gap-3 sm:gap-4 pt-4">
                                 <a href="./list.html"
-                                    class="flex-1 bg-gray-200 text-gray-700 px-6 py-3 rounded-lg font-medium hover:bg-gray-300 transition-colors text-center">
+                                    class="flex-1 bg-gray-200 text-gray-700 px-4 sm:px-6 py-2 sm:py-3 rounded-lg font-medium hover:bg-gray-300 transition-colors text-center text-sm sm:text-base">
                                     Batal
                                 </a>
                                 <button type="submit"
-                                    class="flex-1 bg-indigo-600 text-white px-6 py-3 rounded-lg font-medium hover:bg-indigo-700 transition-colors">
-                                    <svg class="w-5 h-5 inline mr-2" fill="none" stroke="currentColor"
+                                    class="flex-1 bg-indigo-600 text-white px-4 sm:px-6 py-2 sm:py-3 rounded-lg font-medium hover:bg-indigo-700 transition-colors text-sm sm:text-base">
+                                    <svg class="w-4 h-4 sm:w-5 sm:h-5 inline mr-1 sm:mr-2" fill="none" stroke="currentColor"
                                         viewBox="0 0 24 24">
                                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                                             d="M5 13l4 4L19 7" />
@@ -313,7 +313,7 @@
                             Preview Dokumen
                         </label>
                         <div id="noPreview"
-                            class="border-2 border-dashed border-gray-300 rounded-lg h-full min-h-[400px] flex items-center justify-center">
+                            class="border-2 border-dashed border-gray-300 rounded-lg h-full min-h-[250px] sm:min-h-[400px] flex items-center justify-center">
                             <div class="text-center text-gray-400">
                                 <svg class="mx-auto h-16 w-16 mb-4" fill="none" stroke="currentColor"
                                     viewBox="0 0 24 24">
@@ -325,7 +325,7 @@
                             </div>
                         </div>
                         <div id="filePreview"
-                            class="hidden border border-gray-300 rounded-lg overflow-hidden h-full min-h-[400px]">
+                            class="hidden border border-gray-300 rounded-lg overflow-hidden h-full min-h-[250px] sm:min-h-[400px]">
                             <iframe id="previewFrame" class="w-full h-full"></iframe>
                         </div>
                     </div>
