--- a/kab-kota/laporan/list.html
+++ b/kab-kota/laporan/list.html
@@ -127,8 +127,53 @@
             border-color: #6366f1 !important;
         }
 
+        /* Mobile responsive DataTables - only table scrolls, not controls */
+        @media (max-width: 768px) {
+
+            .dataTables_wrapper .dataTables_length,
+            .dataTables_wrapper .dataTables_filter,
+            .dataTables_wrapper .dataTables_info,
+            .dataTables_wrapper .dataTables_paginate {
+                text-align: left;
+                margin-bottom: 0.5rem;
+            }
+
+            .dataTables_wrapper .dataTables_filter {
+                margin-bottom: 1rem;
+            }
+
+            .dataTables_wrapper .dataTables_filter input {
+                width: 100%;
+                max-width: 200px;
+            }
+
+            table.dataTable {
+                min-width: 800px;
+            }
+        }
+
+        /* Make header and body scroll together */
+        .dataTables_scrollHead {
+            overflow-x: auto !important;
+        }
+
+        .dataTables_scrollBody {
+            overflow-x: auto !important;
+        }
+
+        /* Sync header scroll with body scroll */
+        .dataTables_scroll {
+            overflow: hidden;
+        }
+
         /* Responsive table wrapper */
         .table-responsive {
+            overflow-x: auto;
+            -webkit-overflow-scrolling: touch;
+        }
+
+        /* Table scroll wrapper */
+        .table-scroll-wrapper {
             overflow-x: auto;
             -webkit-overflow-scrolling: touch;
         }
@@ -320,7 +365,8 @@
                         Upload RTK
                     </a>
                 </div>
-                <div class="table-responsive">
+                <!-- Table with scroll wrapper -->
+                <div class="table-scroll-wrapper">
                     <table id="rtkTable" class="display" style="width:100%">
                         <thead>
                             <tr>
@@ -438,6 +484,8 @@
             $(document).ready(function () {
                 $('#rtkTable').DataTable({
                     data: tableData,
+                    scrollX: true,
+                    autoWidth: false,
                     dom: '<"row mb-3"<"col-sm-6"l><"col-sm-6"f>><"row mb-3"<"col-sm-12"B>>rtip',  // Row1: length+search, Row2: buttons
                     buttons: [
                         {
@@ -487,6 +535,20 @@
                         { orderable: false, targets: 4 }
                     ]
                 });
+
+                // Sync scroll between header and body
+                const scrollBody = document.querySelector('.dataTables_scrollBody');
+                const scrollHead = document.querySelector('.dataTables_scrollHead');
+
+                if (scrollBody && scrollHead) {
+                    scrollBody.addEventListener('scroll', function () {
+                        scrollHead.scrollLeft = scrollBody.scrollLeft;
+                    });
+
+                    scrollHead.addEventListener('scroll', function () {
+                        scrollBody.scrollLeft = scrollHead.scrollLeft;
+                    });
+                }
             });
 
             // Download file function
