--- a/pusat/laporan/index.html
+++ b/pusat/laporan/index.html
@@ -268,7 +268,18 @@
                         </svg>
                         <span class="flex-1 ms-3 whitespace-nowrap">Rekapitulasi SDM</span>
                     </a>
+                </li>                <li>
+                    <a href="../notifikasi/index.html"
+                        class="flex items-center px-2 py-1.5 text-gray-500 rounded-lg hover:bg-purple-100 hover:text-indigo-600 transition-colors group">
+                        <svg class="shrink-0 w-5 h-5 transition duration-75 group-hover:text-indigo-600"
+                            aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+                            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="M12 5.365V3m0 2.365a5.338 5.338 0 0 1 5.133 5.368v1.8c0 2.386 1.867 2.982 1.867 4.175 0 .593 0 1.292-.538 1.292H5.538C5 18 5 17.301 5 16.708c0-1.193 1.867-1.789 1.867-4.175v-1.8A5.338 5.338 0 0 1 12 5.365ZM8.733 18c.094.852.306 1.54.944 2.112a3.48 3.48 0 0 0 4.646 0c.638-.572 1.236-1.26 1.33-2.112h-6.92Z" />
+                        </svg>
+                        <span class="flex-1 ms-3 whitespace-nowrap">Notifikasi</span>
+                    </a>
                 </li>
+
                 <li>
                     <a href="../support/help.html"
                         class="flex items-center px-2 py-1.5 text-gray-500 rounded-lg hover:bg-purple-100 hover:text-indigo-600 transition-colors group">
@@ -350,7 +361,7 @@
                 <div class="mb-4 flex flex-col sm:flex-row sm:justify-between sm:items-center gap-3">
                     <h2 class="text-lg font-semibold text-gray-900">Daftar Laporan RTK</h2>
                 </div>
-                <div class="table-responsive">
+                <div class="table-scroll-wrapper">
                     <table id="rtkTable" class="display" style="width:100%">
                         <thead>
                             <tr>
@@ -765,6 +776,8 @@
         $(document).ready(function () {
             $('#rtkTable').DataTable({
                 data: tableData,
+                    scrollX: true,
+                    autoWidth: false,
                 dom: '<"row mb-3"<"col-sm-6"l><"col-sm-6"f>><"row mb-3"<"col-sm-12"B>>rtip',
                 buttons: [
                     {
@@ -814,6 +827,20 @@
                     { orderable: false, targets: 4 }
                 ]
             });
+
+        // Sync scroll between header and body
+        const scrollBody = document.querySelector('.dataTables_scrollBody');
+        const scrollHead = document.querySelector('.dataTables_scrollHead');
+        
+        if (scrollBody && scrollHead) {
+            scrollBody.addEventListener('scroll', function() {
+                scrollHead.scrollLeft = scrollBody.scrollLeft;
+            });
+            
+            scrollHead.addEventListener('scroll', function() {
+                scrollBody.scrollLeft = scrollHead.scrollLeft;
+            });
+        }
         });
 
         // View RTK function - shows PDF in modal
